<resources>
    <string name="app_name">LearnMusic</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_message_text">Welcome to Learn Music, brought to you by Sylan Media!</string>
    <string name="title_activity_selection">SelectionActivity</string>
    <string name="settings_instruction_text">Edit your settings before you begin</string>
    <string name="bass_clef_text">Bass Clef</string>
    <string name="treble_clef_text">Treble Clef</string>
    <string name="alto_clef_text">Alto Clef</string>
    <string name="slow_text">Slow</string>
    <string name="medium_text">Medium</string>
    <string name="fast_text">Fast</string>
    <string name="notime_text">No Time Limit</string>
    <string name="start_practice_text">Start Practicing</string>
    <string name="title_activity_practice">PracticeActivity</string>
    <string name="prompt_text">What note is this?</string>
    <string name="a_text">A</string>
    <string name="b_text">B</string>
    <string name="c_text">C</string>
    <string name="d_text">D</string>
    <string name="e_text">E</string>
    <string name="f_text">F</string>
    <string name="g_text">G</string>
    <string name="pass_text">Pass</string>
    <string name="score_text">Score: 0</string>
    <string name="passes_used_text">Passes Used: 0</string>
    <string name="default_countdown_text">""</string>
    <string name="title_activity_results">ResultsActivity</string>
</resources>
