<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="activity.SelectionActivity"
    tools:showIn="@layout/activity_selection">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_instruction_text"
        android:textSize="40sp"
        android:id="@+id/settings_text"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_text"
        android:paddingTop="20dp"
        android:id="@+id/clef_selection_rl">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/treble_clef_text"
            android:id="@+id/treble_clef_cb"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bass_clef_text"
            android:id="@+id/bass_clef_cb"
            android:layout_below="@id/treble_clef_cb"/>
        <CheckBox
            android:layout_below="@id/bass_clef_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alto_clef_text"
            android:id="@+id/alto_clef_cb"
            />
    </RelativeLayout>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="40dp"
        android:layout_below="@id/clef_selection_rl"
        android:id="@+id/speed_selection_rg">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slow_text"
            android:id="@+id/slow_rb"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium_text"
            android:layout_below="@id/slow_rb"
            android:id="@+id/medium_rb"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fast_text"
            android:layout_below="@id/medium_rb"
            android:id="@+id/fast_rb"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notime_text"
            android:layout_below="@id/fast_rb"
            android:id="@+id/notime_rb"
            android:checked="true"
            />
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/speed_selection_rg"
        android:text="@string/start_practice_text"
        android:textSize="20sp"
        android:id="@+id/start_practice_button"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>
</RelativeLayout>
