<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="activity.PracticeActivity"
    tools:showIn="@layout/activity_practice">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_text"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:id="@+id/practice_prompt"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/practice_prompt"
        android:paddingTop="40dp"
        android:src="@drawable/sylan"
        android:adjustViewBounds="true"
        android:elevation="5dp"
        android:id="@+id/current_note_image"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/current_note_image"
        android:paddingTop="40dp"
        android:id="@+id/answer_buttons_rl">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/top_notes_rl">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a_text"
                android:onClick="aOnClick"
                android:elevation="2dp"
                android:id="@+id/a_text"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/a_text"
                android:text="@string/b_text"
                android:onClick="bOnClick"
                android:elevation="2dp"
                android:id="@+id/b_text"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/b_text"
                android:text="@string/c_text"
                android:onClick="cOnClick"
                android:elevation="2dp"
                android:id="@+id/c_text"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/c_text"
                android:elevation="2dp"
                android:text="@string/d_text"
                android:onClick="dOnClick"
                android:id="@+id/d_text"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/top_notes_rl"
            android:layout_centerHorizontal="true"
            android:id="@+id/bottom_notes_rl">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e_text"
                android:elevation="2dp"
                android:onClick="eOnClick"
                android:id="@+id/e_text"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/e_text"
                android:elevation="2dp"
                android:text="@string/f_text"
                android:onClick="fOnClick"
                android:id="@+id/f_text"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/f_text"
                android:elevation="2dp"
                android:text="@string/g_text"
                android:onClick="gOnClick"
                android:id="@+id/g_text"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/g_text"
                android:elevation="2dp"
                android:text="@string/pass_text"
                android:onClick="passOnClick"
                android:id="@+id/pass_text" />
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/answer_buttons_rl"
        android:id="@+id/counts_rl">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_text"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/score_text" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/score_text"
            android:text="@string/passes_used_text"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/pass_view_text"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/answer_buttons_rl"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="35dp"
        android:text="@string/default_countdown_text"
        android:textSize="50sp"
        android:id="@+id/timer_text" >
    </TextView>
</RelativeLayout>